devops/base/backup/deploy.yaml
# Copyright 2021 The Province of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
apiVersion: v1
kind: Deployment
metadata:
  annotations:
    description: |
      Defines how to deploy the mongodb-backup 
      server.
  labels:
    template: mongodb-backup-deployment
  name: mongodb-backup
spec:
  replicas: 1
  selector:
    name: mongodb-backup
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: mongodb-backup
        role: backup
      name: mongodb-backup
    spec:
      containers:
        - name: mongodb-backup
          image: image-registry.openshift-image-registry.svc:5000/6e2f55-tools/backup-container:latest
          ports: []
          resources:
            limits:
              cpu: 300m
              memory: 1024Mi
            requests:
              cpu: 220m
              memory: 512Mi
          volumeMounts:
          - mountPath: /backups/
            name: backup
          - mountPath: /var/lib/mongodb/data
            name: backup-verification
          - mountPath: /backup.conf
            name: mongodb-backup-config-volume
            subPath: backup.conf
      volumes:
        - name: backup
          persistentVolumeClaim:
            claimName: backup
        - name: backup-verification
          persistentVolumeClaim:
            claimName: backup-verification
        - name: mongodb-backup-config-volume
          configMap:
            name: rocketchat-backup-config
            items:
            - key: backup.conf
              path: backup.conf
